--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.datasource.url = jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;
+spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.username = sa
+spring.datasource.password = password
+spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled: true
+spring.jpa.hibernate.ddl-auto= create-drop
+
+server.error.include-stacktrace=never
+
+server.port=8080
+
